--- a/MonkeyDotnet/src/Monkey.Web/appsettings.json
+++ b/MonkeyDotnet/src/Monkey.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PsqlConnection": ""
+    "PsqlConnection": "Host=hostname:port;Database=monkey;Username=;Password="
   },
   "AllowedHosts": "*"
 }
