modify docker file

--- a/MonkeyDotnet/src/Monkey.Web/Dockerfile
+++ b/MonkeyDotnet/src/Monkey.Web/Dockerfile
@@ -12,11 +12,11 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/Monkey.Web/Monkey.Web.csproj", "src/Monkey.Web/"]
-RUN dotnet restore "./src/Monkey.Web/Monkey.Web.csproj"
+COPY ["Monkey.Web.csproj", "src/Monkey.Web/"]
+RUN dotnet restore "src/Monkey.Web/Monkey.Web.csproj"
 COPY . .
-WORKDIR "/src/src/Monkey.Web"
-RUN dotnet build "./Monkey.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Monkey.Web"
+RUN dotnet build "Monkey.Web/Monkey.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # このステージは、最終ステージにコピーするサービス プロジェクトを公開するために使用されます
 FROM build AS publish
